new way of installing Galician locale. The problem of rewriting java.ext.dirs was that we would lose all extensions defined before, and there are quite important ones (e.g. related to SSL/cryptography)