@@ -10,7 +10,7 @@ SET LOCAL_CLASSPATH=%GP_HOME%\eclipsito.jar;%GP_HOME%
 SET CONFIGURATION_FILE=ganttproject-eclipsito-config.xml
 SET BOOT_CLASS=org.bardsoftware.eclipsito.Boot
 
-"%JAVA_COMMAND%" -Djava.ext.dirs="%GP_HOME%\jre_ext" -Xmx512m -classpath "%CLASSPATH%;%LOCAL_CLASSPATH%" -ea %BOOT_CLASS% "%CONFIGURATION_FILE%" -log  %1 %2 %3 %4 %5 %6 
+"%JAVA_COMMAND%" -Xmx512m -classpath "%CLASSPATH%;%LOCAL_CLASSPATH%" -ea %BOOT_CLASS% "%CONFIGURATION_FILE%" -log  %1 %2 %3 %4 %5 %6 
 if %ERRORLEVEL% EQU 9009 goto ERROR_NO_JAVA
 goto END
 
